// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test LanguageToggler Component Check if renders correctly with the snapshot 1`] = `
<DocumentFragment>
  <div
    aria-label="Language"
    color="primary"
    data-testid="toggle-button-group"
    style="background-color: white;"
    value="en"
  >
    <button
      data-testid="toggle-button"
      value="en"
    >
      EN
    </button>
    <button
      data-testid="toggle-button"
      value="es"
    >
      ES
    </button>
  </div>
</DocumentFragment>
`;

exports[`Test TeamCard component Check if renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Language"
    class="MuiToggleButtonGroup-root css-bghv3y-MuiToggleButtonGroup-root"
    role="group"
    style="background-color: white;"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-1dlyelz-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="en"
    >
      EN
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-1dlyelz-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="es"
    >
      ES
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
